<resources>
    <string name="submit">提交</string>
    <string name="ok">确定</string>
    <string name="share">分享</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="reset">重置</string>
    <string name="cancel">取消</string>
    <string name="open">打开</string>
    <string name="save">保存</string>
    <string name="more">更多</string>
    <string name="setting">设置</string>
    <string name="complete">完成</string>
    <string name="select_all">全选</string>
    <string name="loading_text">请稍等...</string>
    <string name="exit_message">再按一次返回键退出应用</string>
    <string name="update">更新</string>
    <string name="update_newest_app">更新应用</string>
    <string name="confirm">确认</string>
    <string name="confirm_modify">确认修改</string>
    <string name="search">搜索</string>
    <string name="actionbar_button_scanner">扫一扫</string>
    <string name="actionbar_button_new_customer">新增会员</string>
    <string name="tabbar_title1">首页</string>
    <string name="tabbar_title2">分类</string>
    <string name="tabbar_title3">社区</string>
    <string name="tabbar_title4">购物车</string>
    <string name="tabbar_title5">我的</string>
    <string name="tabbar_filter">美化</string>
    <string name="my_address_book">地址本</string>
    <string name="accout_select_address_book">选择收货地址</string>
    <string name="accout_my_address_book">收货地址</string>
    <string name="my_address_book_editor">编辑收货地址</string>
    <string name="my_address_book_editor_username">收货人不能为空。</string>
    <string name="my_address_book_editor_phone">手机号码不能为空</string>
    <string name="my_address_book_editor_postal">邮政编码</string>
    <string name="my_address_book_editor_district">所在区域(必填)</string>
    <string name="my_address_book_editor_address">详细地址不能为空</string>
    <string name="please_improve_infomation">请完善信息</string>
    <string name="please_input_address">请输入地址</string>
    <string name="confirm_delete_address">确定要删除收货人「%s」吗？</string>
    <string name="please_input">请填写%s</string>
    <string name="set_default">设为默认</string>
    <string name="province">省份</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="add">新增</string>
    <string name="select_addr_tips">（请完善详细地址信息）</string>
    <string name="zone">街道、区域</string>
    <string name="pull_to_refresh_pull_label">刷新...</string>
    <string name="pull_to_refresh_release_label">刷新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_footer_hint_normal">加载更多</string>
    <string name="scanner_code_buy">扫码购</string>
    <string name="scanner_bottom_message">将二维码/条形码放入扫描框内\n自动识别不安全链接，请放心扫码</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="result_text">找到纯文本</string>
    <string name="scan_help_title">扫描帮助</string>
    <string name="scan_help_msg">如何扫描商品的条形码？\n\n 扫描时，请将条码的黑线放置与框内红线垂直，并保持稳定一段时间。扫描成功会发出提示音，并返回搜索结果页。
        \n此条码扫描功能基于ZXing开源条码引擎，如果您手机上的摄像头没有自动对焦功能，或者环境光线非常昏暗，可能会出现无法识别条形码或识别有误的情况，建议您换到光线良好的环境中试一试。</string>
    <string name="other_cropper_ptotoss">裁图</string>
    <string name="acco_address_add_text">新增收货地址</string>
    <string name="acco_address_save_text">保存</string>
    <string name="acco_address_name">收货人：</string>
    <string name="acco_address_province">省份:</string>
    <string name="acco_address_city">城市：</string>
    <string name="acco_address_town">区/县：</string>
    <string name="acco_address_tel">联系电话：</string>
    <string name="acco_address_area">街道：</string>
    <string name="acco_address_detailed">详细地址：</string>
    <string name="acco_address_id_name">身份证号码：</string>
    <string name="acco_address_id_prompt">* 根据政策要求，用户必须填写收货人身份证号</string>
    <string name="intent_key_type">type</string>
    <string name="intent_key_image_name">imagename</string>
    <string name="intent_key_serializable">serializable</string>
    <string name="intent_key_chooses">chooses</string>
    <string name="intent_key_image">image</string>
    <string name="intent_key_thumbnail">thumbnail</string>
    <string name="username">用户名</string>
    <string name="acco_regist_email">电子邮箱</string>
    <string name="acco_regist_passwd_hint">密码必须为6-20个字符</string>
    <string name="acco_login_username_hint">用户名/邮箱/手机号</string>
    <string name="acco_login_passwd">请输入密码</string>
    <string name="acco_login_passwd_hint">密码必须为6-20个字符</string>
    <string name="acco_login_vcode">验证码</string>
    <string name="acco_login_submit">立即登录</string>
    <string name="acco_login_title">登录</string>
    <string name="acco_logout">退出账号</string>
    <string name="acco_login_forget_passwd">找回密码</string>
    <string name="acco_login_settled">申请入驻</string>
    <string name="acco_login_regist">注册</string>
    <string name="acco_login_fast_regist"><u>快速注册</u></string>
    <string name="acco_login_third_party_account">社交账号登录:</string>
    <string name="acco_login_third_party_message">使用以上账号登录</string>
    <string name="acco_regist_input_phone_number">请输入手机号码</string>
    <string name="acco_regist_offline_member">您已是物美线下注册会员,请填写密码。</string>
    <string name="acco_regist_input_password">请设置密码</string>
    <string name="acco_reset_password">修改登录密码</string>
    <string name="acco_reset_conform_password">确认修改密码</string>
    <string name="acco_reset_password_submit">确认修改</string>
    <string name="acco_reset_password_input_old_tip">请输入原密码</string>
    <string name="acco_reset_password_input_old">原密码</string>
    <string name="acco_reset_password_input_new">新密码</string>
    <string name="acco_reset_password_input_new_again_tip">重新输入新密码</string>
    <string name="acco_reset_password_input_new_again">确认密码</string>
    <string name="acco_reset_password_confirm_failed">两次输入密码不一致</string>
    <string name="acco_regist_get_verify_code">获取验证码</string>
    <string name="acco_regist_get_verify_code_again">重新发送</string>
    <string name="acco_regist_input_verify_code">请输入验证码</string>
    <string name="acco_regist_verify_code_countdown">%s秒</string>
    <string name="acco_regist_phone_number_invalid">请正确填写手机号码</string>
    <string name="acco_regist_verify_code_error">请正确填写验证码</string>
    <string name="acco_regist_password_error">请输入6-20位密码</string>
    <string name="acco_regist_name_error">请输入昵称</string>
    <string name="acco_regist_success">恭喜你，注册成功！</string>
    <string name="acco_regist_upgrade_profile">注册成功请完善一下资料！</string>
    <string name="acco_forget_password_phone_hint">用户名，手机号码或邮箱</string>
    <string name="next_step">下一步</string>
    <string name="acco_forget_password_step2_message">我们已发送验证码到\n%s</string>
    <string name="acco_forget_password_step2_countdown">%s</string>
    <string name="acco_forget_password_step3_message">重置密码后，可以使用用户名+密码进行登录</string>
    <string name="acco_logout_confirm">确定要退出当前登录的账号吗？</string>
    <string name="acco_bank_confirm">确定要删除该提现账号吗？</string>
    <string name="acco_setting_reset_acco_newacco_tv">新登录账号</string>
    <string name="acco_setting_reset_acco_newacco_et_tip">请输入新登录账号</string>
    <string name="acco_setting_reset_acco_password_tv">登录密码</string>
    <string name="acco_setting_reset_acco_password_et_tip">请输入登录密码</string>
    <string name="acco_setting_reset_acco_curacco_tv">当前登录账号：%s</string>
    <string name="acco_header_noname">未设置昵称</string>
    <string name="choose_share_platform">分享给好友</string>
    <string name="share_wechat_chat">微信</string>
    <string name="share_wechat_circle">朋友圈</string>
    <string name="share_sms">发短信</string>
    <string name="share_qrcode">二维码</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_qq">QQ</string>
    <string name="share_copy">复制链接</string>
    <string name="share_save">保存到相册</string>
    <string name="share_success">%s成功</string>
    <string name="share_failed">%s失败</string>
    <string name="share_weibo">新浪微博</string>
    <string name="share_qqblog">腾讯微博</string>
    <string-array name="bank_array">
        <item>中国人民银行</item>
        <item>工商银行</item>
        <item>农业银行</item>
        <item>中国银行</item>
        <item>建设银行</item>
        <item>交通银行</item>
        <item>华夏银行</item>
        <item>光大银行</item>
        <item>招商银行</item>
        <item>中信银行</item>
        <item>兴业银行</item>
        <item>民生银行</item>
        <item>上海浦东发展银行</item>
        <item>恒丰银行</item>
    </string-array>
    <string name="refresh_succeed"></string>
    <string name="refresh_fail">加载失败</string>
    <string name="load_succeed"></string>
    <string name="pull_to_refresh">刷新</string>
    <string name="release_to_refresh">刷新</string>
    <string name="pullup_to_load">加载更多</string>
    <string name="release_to_load">加载更多</string>
    <string name="refreshing">加载中...</string>
    <string name="comm_agreement"><u>会员注册协议</u></string>
    <string name="comm_privacy"><u>隐私保护政策</u></string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_detail_stock_not_enough">库存不足，最多购买%s件</string>
    <string name="shopping_car_quantity">数量: </string>
    <string name="exchange_complete">完成</string>
    <string name="actionbar_button_assort">分类</string>
    <string name="actionbar_search_keywords">输入商品名称</string>
    <string name="goods_detail_tip">购物提示:</string>
    <string name="goods_detail_recommend">苏盐生活家推荐:</string>
    <string name="goods_detail_button_onsale">商品优惠</string>
    <string name="goods_detail_order_button_onsale">订单优惠</string>
    <string name="goods_detail_button_images">商品详情</string>
    <string name="goods_detail_button_imagess">精选</string>
    <string name="goods_detail_button_props">规格参数</string>
    <string name="goods_detail_button_propss">人气</string>
    <string name="goods_detail_button_comments">口碑推荐</string>
    <string name="goods_detail_button_commentss">关注</string>
    <string name="goods_detail_button_recommend">你可能还喜欢</string>
    <string name="please_choose_goods_properties">请选择商品属性</string>
    <string name="comments_avg_points">综合评分</string>
    <string name="add_to_shoping_car_success">加入购物车成功</string>
    <string name="activity_limit_quantity">每人限购%1$d件</string>
    <string name="total_sales">销量</string>
    <string name="total_rates_unit">人</string>
    <string name="total_rates">评价</string>
    <string name="total_sales_unit">件</string>
    <string name="goods_detail_buy_stock">库存%s件</string>
    <string name="goods_detail_buy_lime">限购%s件</string>
    <string name="goods_detail_stock_lime">超过限购数量，最多购买%s件</string>
    <string name="goods_detail_select_status">已选择：</string>
    <string name="shopping_car_price">￥%s </string>
    <string name="confirm_order_title"> 确认订单</string>
    <string name="confirm_order_ticket">优惠券</string>
    <string name="confirm_order_distribution">配送方式</string>
    <string name="confirm_order_ticket_unavailable">无可用优惠券</string>
    <string name="confirm_order_totals_price">总价:</string>
    <string name="confirm_order_express_fee">邮费:</string>
    <string name="confirm_order_coupon">优惠:</string>
    <string name="confirm_order_total_price">实付款:</string>
    <string name="invoice_type">发票类型</string>
    <string name="invoice_type_null">不开发票</string>
    <string name="invoice_type_personal">个人发票</string>
    <string name="invoice_type_company">公司发票</string>
    <string name="invoice_title">发票抬头</string>
    <string name="invoice_title_summary">可输入个人或单位名称</string>
    <string name="invoice_content">发票内容</string>
    <string name="collection_money_name">收款金额</string>
    <string name="collection_money_title">收款名称</string>
    <string name="collection_address">需要收货地址</string>
    <string name="collection_hint">*%s配合银行共同打击虚假交易、转账套现、洗钱等被禁止的交易行为，请进行真实交易，否则款项将不能提现！</string>
    <string name="collection_money_name_hint">输入收款金额</string>
    <string name="collection_share">分享给好友收款</string>
    <string name="collection_name">收款名称：</string>
    <string name="collection_money">金额(元)：￥</string>
    <string name="collection_share_select">好友选择</string>
</resources>