<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/acco_reset_password_old_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <EditText
                android:id="@+id/acco_reset_password_input_old_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/acco_reset_password_input_old_tv_tip"
                android:background="@drawable/qianseit_bg_enter_view"
                android:hint="@string/acco_reset_password_input_old_tip"
                android:inputType="textPassword"
                android:textColor="@color/westore_gray_textcolor"
                android:textSize="@dimen/TextSizeMedium" />

            <TextView
                android:id="@+id/acco_reset_password_input_old_tv_tip"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/PaddingXLarge"
                android:text="@string/acco_reset_password_input_old"
                android:textColor="@color/westore_gray_textcolor"
                android:textSize="@dimen/TextSizeMedium"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/westore_divider_bgcolor" />

        <RelativeLayout
            android:id="@+id/acco_reset_password_new_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <EditText
                android:id="@+id/acco_reset_password_input_new_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/acco_reset_password_input_new_tv_tip"
                android:background="@drawable/qianseit_bg_enter_view"
                android:hint="@string/acco_login_passwd_hint"
                android:inputType="textPassword"
                android:textColor="@color/westore_gray_textcolor"
                android:textSize="@dimen/TextSizeMedium" />

            <TextView
                android:id="@+id/acco_reset_password_input_new_tv_tip"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/PaddingXLarge"
                android:text="@string/acco_reset_password_input_new"
                android:textColor="@color/westore_gray_textcolor"
                android:textSize="@dimen/TextSizeMedium"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/westore_divider_bgcolor" />

        <RelativeLayout
            android:id="@+id/acco_reset_password_new_again_rl"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <EditText
                android:id="@+id/acco_reset_password_input_new_again_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/acco_reset_password_input_new_again_tv_tip"
                android:background="@drawable/qianseit_bg_enter_view"
                android:hint="@string/acco_reset_password_input_new_again_tip"
                android:inputType="textPassword"
                android:textColor="@color/westore_gray_textcolor"
                android:textSize="@dimen/TextSizeMedium" />

            <TextView
                android:id="@+id/acco_reset_password_input_new_again_tv_tip"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/PaddingXLarge"
                android:text="@string/acco_reset_password_input_new_again"
                android:textColor="@color/westore_gray_textcolor"
                android:textSize="@dimen/TextSizeMedium"
                android:visibility="gone" />
        </RelativeLayout>

        <Button
            android:id="@+id/acco_reset_password_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="38dip"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/app_button_selector"
            android:text="确认修改"
            android:textColor="@color/white"
            android:textSize="@dimen/TextSizeMedium" />
    </LinearLayout>

</RelativeLayout>